fix overflow on mobile issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+}
+
+* {
+  /*outline: 1px dotted black;*/
 }
